--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -90,6 +90,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DaoEstudiante.cs" />
+    <Compile Include="DaoGrupo.cs" />
     <Compile Include="DaoUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
