se crean windows forms

--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLEstudiante.cs" />
+    <Compile Include="BLGrupo.cs" />
     <Compile Include="BLUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
