--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Grado.cs" />
     <Compile Include="Grupo.cs" />
     <Compile Include="Estudiante.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
