--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLEstudiante.cs" />
+    <Compile Include="BLGrado.cs" />
     <Compile Include="BLGrupo.cs" />
     <Compile Include="BLUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
