se agregan vistas de gestion de materias

--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -90,9 +90,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DaoArea.cs" />
     <Compile Include="DaoEstudiante.cs" />
     <Compile Include="DaoGrado.cs" />
     <Compile Include="DaoGrupo.cs" />
+    <Compile Include="DaoPeriodo.cs" />
     <Compile Include="DaoUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
