--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -41,10 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Area.cs" />
     <Compile Include="Grado.cs" />
     <Compile Include="Grupo.cs" />
     <Compile Include="Estudiante.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="Materia.cs" />
+    <Compile Include="Periodo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
