se agrega daoMateria

--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -94,6 +94,7 @@
     <Compile Include="DaoEstudiante.cs" />
     <Compile Include="DaoGrado.cs" />
     <Compile Include="DaoGrupo.cs" />
+    <Compile Include="DaoMateria.cs" />
     <Compile Include="DaoPeriodo.cs" />
     <Compile Include="DaoUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
