--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -45,6 +45,7 @@
     <Compile Include="BLEstudiante.cs" />
     <Compile Include="BLGrado.cs" />
     <Compile Include="BLGrupo.cs" />
+    <Compile Include="BLMateria.cs" />
     <Compile Include="BLPeriodo.cs" />
     <Compile Include="BLUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
