--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -42,11 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Area.cs" />
+    <Compile Include="ConceptoPago.cs" />
     <Compile Include="Grado.cs" />
     <Compile Include="Grupo.cs" />
     <Compile Include="Estudiante.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Materia.cs" />
+    <Compile Include="Pagos.cs" />
     <Compile Include="Periodo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
