--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -41,12 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLAbonoPago.cs" />
     <Compile Include="BLArea.cs" />
+    <Compile Include="BLConceptoPago.cs" />
     <Compile Include="BLEstudiante.cs" />
     <Compile Include="BLGrado.cs" />
     <Compile Include="BLGrupo.cs" />
     <Compile Include="BLLogro.cs" />
     <Compile Include="BLMateria.cs" />
+    <Compile Include="BLPago.cs" />
     <Compile Include="BLPeriodo.cs" />
     <Compile Include="BLUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
