--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -90,7 +90,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DaoAbonoPago.cs" />
     <Compile Include="DaoArea.cs" />
+    <Compile Include="DaoConceptoPago.cs" />
     <Compile Include="DaoEstudiante.cs" />
     <Compile Include="DaoGrado.cs" />
     <Compile Include="DaoGrupo.cs" />
