--- a/Windows_vista/Windows_vista.csproj
+++ b/Windows_vista/Windows_vista.csproj
@@ -36,6 +36,9 @@
     <Reference Include="DocumentFormat.OpenXml, Version=2.5.5631.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\DocumentFormat.OpenXml.2.5\lib\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
+    <Reference Include="itextsharp, Version=5.5.13.1, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.13.1\lib\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="SpreadsheetLight, Version=3.4.9.0, Culture=neutral, PublicKeyToken=32fbb46dc1730c57, processorArchitecture=MSIL">
       <HintPath>..\packages\SpreadsheetLight.3.4.9\lib\SpreadsheetLight.dll</HintPath>
     </Reference>
@@ -187,6 +190,12 @@
     <Compile Include="reportes\Frm_Listado_Estudiantes_vs_Grupos.Designer.cs">
       <DependentUpon>Frm_Listado_Estudiantes_vs_Grupos.cs</DependentUpon>
     </Compile>
+    <Compile Include="reportes\Frm_Listado_Estudiantes_vs_Materias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="reportes\Frm_Listado_Estudiantes_vs_Materias.Designer.cs">
+      <DependentUpon>Frm_Listado_Estudiantes_vs_Materias.cs</DependentUpon>
+    </Compile>
     <Compile Include="reportes\Frm_reporte_admin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -204,6 +213,12 @@
     </Compile>
     <Compile Include="reportes\frm_reporte_secretaria.Designer.cs">
       <DependentUpon>frm_reporte_secretaria.cs</DependentUpon>
+    </Compile>
+    <Compile Include="reportes\Frm_Reporte_XML.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="reportes\Frm_Reporte_XML.Designer.cs">
+      <DependentUpon>Frm_Reporte_XML.cs</DependentUpon>
     </Compile>
     <Compile Include="usuarios\Frm_actualizar_mi_perfil.cs">
       <SubType>Form</SubType>
@@ -348,6 +363,9 @@
     <EmbeddedResource Include="reportes\Frm_Listado_Estudiantes_vs_Grupos.resx">
       <DependentUpon>Frm_Listado_Estudiantes_vs_Grupos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="reportes\Frm_Listado_Estudiantes_vs_Materias.resx">
+      <DependentUpon>Frm_Listado_Estudiantes_vs_Materias.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="reportes\Frm_reporte_admin.resx">
       <DependentUpon>Frm_reporte_admin.cs</DependentUpon>
     </EmbeddedResource>
@@ -356,6 +374,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="reportes\frm_reporte_secretaria.resx">
       <DependentUpon>frm_reporte_secretaria.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="reportes\Frm_Reporte_XML.resx">
+      <DependentUpon>Frm_Reporte_XML.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="usuarios\Frm_actualizar_mi_perfil.resx">
       <DependentUpon>Frm_actualizar_mi_perfil.cs</DependentUpon>
