--- a/Windows_vista/packages.config
+++ b/Windows_vista/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.1" targetFramework="net472" />
   <package id="SpreadsheetLight" version="3.4.9" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
